# Hakaton_ml_all_Russian

./: Ml_work_sex.ipynb  README.md  age.ipynb  pyproject.toml  requirements.txt  submisson.ipynb
data/: baseline_socdem.ipynb  region.py  time_zones.py  ua_client_name_to_num.py  ua_os_type_to_num.py
data/encoders/: day_to_num.py  region_to_num.py  time_zones.py  ua_client_name_to_num.py  ua_client_type_to_num.py  ua_device_type_to_num.py  ua_os_type_to_num.py
