[tool.poetry]
name = "hakaton-ml-all-russian"
version = "0.1.0"
description = ""
authors = ["Manulik <125672053+Otocolobus-manules@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
scipy = "^1.14.1"
scikit-learn = "^1.5.2"
keras = "^3.5.0"
xgboost = "^2.1.1"
lightgbm = "^4.5.0"
torch = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
